--- a/css/styles.css
+++ b/css/styles.css
@@ -4,3 +4,13 @@
   font-family: Verdana;
   text-align: justify;
 }
+
+img {
+  float: center;
+  width: 250px;
+  height: 250px;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  padding: 20px;
+}
