--- a/css/styles.css
+++ b/css/styles.css
@@ -1,7 +1,22 @@
+h1 {
+  font-family: cursive;
+  color: #ADD8E6;
+  text-align: center;
+  padding-bottom: 1em;
+}
+
 .front-end, .back-end {
   display: none;
   font-size: 1.5em;
   font-family: Verdana;
+  text-align: justify;
+}
+
+h2 {
+  font-family: Verdana;
+}
+
+ul {
   text-align: justify;
 }
 
@@ -13,4 +28,8 @@ img {
   margin-left: auto;
   margin-right: auto;
   padding: 20px;
+}
+
+.experience {
+  display: none;
 }
