--- a/css/styles.css
+++ b/css/styles.css
@@ -1,6 +1,7 @@
 body {
-  background-color: #617ed4;
+  background-color: #889edf;
   color: #b0e0e6;
+  font-size: 1.25em;
 }
 h1 {
   font-family: cursive;
@@ -11,7 +12,7 @@ h1 {
 
 .front-end, .back-end {
   display: none;
-  font-size: 1.5em;
+  /*font-size: 1.25em;*/
   font-family: Verdana;
   text-align: justify;
 }
@@ -41,7 +42,7 @@ img {
 }
 
 li {
-  font-size: 1em;
+  /*font-size: 1em;*/
   padding-bottom:10px;
 }
 
@@ -59,5 +60,10 @@ li {
 
 p {
   padding-top: 18px;
-  padding-bottom: 10px;
+  padding-bottom: 5px;
+  /*font-size: 1em;*/
+}
+
+#yes-pairs, #no-pairs {
+  display: none;
 }
